--- a/blog_client/package.json
+++ b/blog_client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,6 +15,8 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "next": "13.4.10",
     "next-auth": "^4.22.3",
     "react": "18.2.0",
